# lightbikeshop

./: .gitattributes  .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  manage.py  nginx.conf  private.pem  pyproject.toml
accounts/: admin.py  forms.py  middlewares.py  models.py  security.py  telegram.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_order_delivery_value.py  0002_user_username.py  0003_notification.py  0003_user_telegram_id.py  0004_user_groups_user_user_permissions.py  0004_user_telegram_username_alter_user_telegram_id.py  0005_alter_order_options_remove_order_address_and_more.py  0006_alter_order_options_alter_order_status.py  0007_alter_order_status.py
cart/: admin.py  apps.py  context_processors.py  forms.py  helpers.py  middlewares.py  models.py  urls.py  utils.py  views.py
cart/migrations/: 0001_initial.py  0002_promotion_cart_promotion.py  0002_remove_cart_session_key_cart_updated_at.py  0002_remove_order_payment_status_alter_order_status.py  0003_pickuppoint_metro.py  0003_rename_product_variant_cartitem_variant.py  0004_pickuppoint_is_main.py  0004_rename_count_cartitem_quantity.py
cart/views/: __init__.py  cart_checkout.py  cdek.py  tpay.py
cms/: admin.py  apps.py  models.py  views.py
cms/migrations/: 0001_initial.py  0002_rename_answer_faq_text.py
core/: admin.py  context_processors.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py
infra/docker/: entrypoint.sh  launcher.py  web.Dockerfile
infra/nginx/: nginx.Dockerfile  nginx.conf  nginx.local.conf  nginx.prod.conf
lightbikeshop/: db.sqlite3  settings.py  urls.py  wsgi.py
lightbikeshop/settings/: base.py  dev.py  prod.py
main/: context_processors.py
orders/: admin.py  apps.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_remove_orderitem_product_orderitem_product_variant.py  0003_alter_order_order_id.py  0004_promotion.py  0005_orderstatus_alter_order_address_alter_order_user_and_more.py  0006_remove_orderstatus_updated_at.py  0007_orderpayment_paymentmethod_paymentstatus_and_more.py  0008_order_total_price_orderhistory.py
products/: admin.py  detail_utils.py  list_utils.py  models.py  urls.py  views.py
src/: manage.py
src/accounts/: admin.py  otp.py  (+10 more)
static/: static.rar
store/: admin.py  filters.py  middlewares.py  models.py  urls.py  views.py
templates/: main.html
(+285 files in other folders)
