[tool.poetry]
name = "lightbikeshop"
version = "0.0.0"
description = ""
authors = ["pharci <lesha.belikov2005@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-admin-interface = "^0.29.4"
django = "^5.1.6"
django-rangefilter = "^0.9.1"
django-jsonform = "^2.23.2"
django-admin-logs = "^1.3.0"
django-admin-column-toggle = "^0.4.2"
django-nested-admin = "^4.1.1"
django-colorfield = "^0.12.0"
requests = "^2.32.3"
jwt = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
